внес правки в каталог производителей

--- a/index.html
+++ b/index.html
@@ -187,50 +187,50 @@
 		<section class="main-producer container">
 			<div class="main-producer-header">
 				<h2>Популярные производители:</h2>
-				<div class="link-button"><a href="blank.html">все производители</a></div>
+				<a class="link-button" href="blank.html">все производители</a>
 			</div>
-			<ul class="main-producer-list">
-				<li class="main-producer-item">
-					<a href="blank.html">
-						<img class="main-producer-img" src="img/bosch.jpg" width="126" height="37" alt="Логотип компании BOSCH">
-					</a>
-				</li>
-				<li class="main-producer-item">
-					<a href="blank.html">
+			<div class="main-producer-list">
+                <a href="blank.html">
+				    <div class="main-producer-item">					
+						<img class="main-producer-img" src="img/bosch.jpg" width="126" height="37" alt="Логотип компании BOSCH">					
+				    </div>
+				</a>
+				<a href="blank.html">
+				    <div class="main-producer-item">					
 						<img src="img/Makita.jpg" width="123" height="40" alt="Логотип компании MAKITA">
-					</a>
-				</li>
-				<li class="main-producer-item">
-					<a href="blank.html">
-						<img src="img/DeWALT.jpg" width="146" height="44" alt="Логотип компании DeWALT">
-					</a>
-				</li>
-				<li class="main-producer-item">
-					<a href="blank.html">
+				    </div>
+			    </a>
+				<a href="blank.html">
+				    <div class="main-producer-item">					
+						<img src="img/DeWALT.jpg" width="146" height="44" alt="Логотип компании DeWALT">				
+					</div>
+				</a>
+				<a href="blank.html">
+				    <div class="main-producer-item">					
 						<img src="img/interscol.jpg" width="200" height="75" alt="Логотип компании ИНТЕРСКОЛ">
-					</a>
-				</li>
-				<li class="main-producer-item">
-					<a href="blank.html">
+					</div>
+				</a>
+                <a href="blank.html">
+				    <div class="main-producer-item">					
 						<img src="img/Hitachi.jpg" width="169" height="31" alt="Логотип компании HITACHI">
-					</a>
-				</li>
-				<li class="main-producer-item">
-					<a href="blank.html">
+					</div>
+				</a>
+                <a href="blank.html">
+				    <div class="main-producer-item">					
 						<img src="img/LG.jpg" width="121" height="73" alt="Логотип компании LG">
-					</a>
-				</li>
-				<li class="main-producer-item">
-					<a href="blank.html">
+					</div>
+				</a>
+                <a href="blank.html">
+				    <div class="main-producer-item">					
 						<img src="img/AEG.jpg" width="151" height="96" alt="Логотип компании AEG">
-					</a>
-				</li>
-				<li class="main-producer-item">
-					<a href="blank.html">
+					</div>
+				</a>
+                <a href="blank.html">
+				    <div class="main-producer-item">					
 						<img src="img/Metabo.jpg" width="204" height="69" alt="Логотип компании METABO">
-					</a>
-				</li>
-			</ul>
+					</div>
+				</a>
+			</div>
 		</section>
 		
 		<section class="main-services">
@@ -361,7 +361,7 @@
 	
     <section class="modal modal-map">
 		<a href="#" class="modal-map-close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123775!2d30.320894615830895!3d59.938796869048254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1604487277804!5m2!1sru!2sru" width="943" height="449" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"  title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123775!2d30.320894615830895!3d59.938796869048254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1604487277804!5m2!1sru!2sru" width="943" height="449"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"  title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
     </section>
 	
 	<section class="modal modal-question">
