расширил кликабельную область кнопок и ссылок

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Каталог строительных материалов и инструментов для ремонта «Техномарт»</title>
 	<link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page-body">
 
@@ -41,8 +41,8 @@
 				<div class="header-section-centr-address"><p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
 		    </div>
 			<div class="header-section-centr-authorization">
-			    <div class="header-section-centr-login-link"><a href="blank.html"><svg width="20" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.2 8.5L5.7 0v6H0v5h5.7v6l8.5-8.5z" fill="#C5C5C5"/><path d="M16.2 15h-4.8v2h4.8c2 0 2.8-1.8 2.9-3V3c0-1.2-.8-3-3-3h-4.7v2h4.8c.8 0 1 .7 1 1v11c0 .3-.2 1-1 1z" fill="#C5C5C5"/></svg>Вход</a></div>
-			    <div class="header-section-centr-reg-link"><a href="blank.html">Регистрация</a></div>
+			    <a class="header-section-centr-login-link" href="blank.html"><svg width="20" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.2 8.5L5.7 0v6H0v5h5.7v6l8.5-8.5z" fill="#C5C5C5"/><path d="M16.2 15h-4.8v2h4.8c2 0 2.8-1.8 2.9-3V3c0-1.2-.8-3-3-3h-4.7v2h4.8c.8 0 1 .7 1 1v11c0 .3-.2 1-1 1z" fill="#C5C5C5"/></svg>Вход</a>
+			    <a class="header-section-centr-reg-link" href="blank.html">Регистрация</a>
 			</div>
 		</section>
 		<nav class="header-navigation">	
@@ -66,17 +66,17 @@
 		    <ul class="main-promo-list">
                 <li class="main-promo-item promo-materials">				    
 				    <h2>Материалы</h2>
-					<div class="main-promo-buttom"><a href="blank.html">на любой вкус</a></div>
+					<a class="main-promo-buttom" href="blank.html">на любой вкус</a>
 					<div class="main-promo-new">new</div>				
 				</li>
 		        <li class="main-promo-item promo-instrument">				    
 				    <h2>Инструмент</h2>
-					<div class="main-promo-buttom"><a href="blank.html">на все случаи</a></div>	
+					<a class="main-promo-buttom" href="blank.html">на все случаи</a>	
 					<div class="main-promo-new none">new</div>					
 				</li>
 				<li class="main-promo-item promo-technic">				    
 				    <h2>Техника</h2>
-					<div class="main-promo-buttom"><a href="blank.html">для стройки</a></div>
+					<a class="main-promo-buttom" href="blank.html">для стройки</a>
 					<div class="main-promo-new none">new</div>						
 				</li>
 				<li class="main-promo-slider">
@@ -84,13 +84,13 @@
 						<div class="main-promo-slide promo-slide1 none">
 							<h2 class="slide-title-h2">Дрели</h2>
 							<p class="slide-title-p">Соседям на радость!</p>
-							<div class="main-promo-slide-link link-button"><a href="#">открыть каталог</a></div>
+							<a class="main-promo-slide-link link-button" href="#">открыть каталог</a>
 						</div>
 
 						<div class="main-promo-slide promo-slide2">
 							<h2 class="slide-title-h2">Перфораторы</h2>
                             <p class="slide-title-p">Настоящие мужские игрушки</p>
-							<div class="main-promo-slide-link link-button"><a href="#">открыть каталог</a></div>
+							<a class="main-promo-slide-link link-button" href="#">открыть каталог</a>
 						</div>
 
 						<button class="main-promo-slider-controls1 current" type="button" aria-label="Первый слайд"></button>
@@ -102,12 +102,12 @@
 				</li>
 				<li class="main-promo-item promo-sale">				    
 				    <h2>Скидки 50%</h2>
-					<div class="main-promo-buttom"><a href="blank.html">на 350 товаров</a></div>
+					<a class="main-promo-buttom" href="blank.html">на 350 товаров</a>
 					<div class="main-promo-new none">new</div>					
 				</li>
 				<li class="main-promo-item promo-delivery">				    
 				    <h2>Доставка</h2>
-					<div class="main-promo-buttom"><a href="blank.html">бесплатно</a></div>
+					<a class="main-promo-buttom" href="blank.html">бесплатно</a>
 					<div class="main-promo-new none">new</div>			
 				</li>
 			</ul>
@@ -116,7 +116,7 @@
 		<section class="main-product container">
 			<div class="main-product-header">
 				<h2>Популярные товары:</h2>
-				<div class="link-button"><a href="blank.html">все популярные товары</a></div>
+				<a class="link-button" href="blank.html">все популярные товары</a>
 			</div>
 			<ul class="main-product-list">
 				<li class="main-product-item">
@@ -286,7 +286,7 @@
 					<li class="main-info-text-item"><div class="red-line"></div>Автотрейдинг</li>
 					<li class="main-info-text-item"><div class="red-line"></div>ЖелДорЭкспедиция</li>
 				</ul>
-				<div class="link-button main-info-text-link"><a href="#">Подробнее о компании</a></div>
+				<a class="link-button main-info-text-link" href="#">Подробнее о компании</a>
 			</div>
 			
 			<div class="main-info-map">
@@ -294,7 +294,7 @@
 				<div class="main-info-map-p"><p>Вы можете забрать товар сами,
                    заехав в наш офис:</p></div>
 				<a href="blank.html"><img src="img/map.jpg" width="300" height="158" alt="Карта с нашим адресом"></a>
-				<div class="link-button main-info-map-link"><a href="blank.html">Заблудились? Напишите нам!</a></div>
+				<a class="link-button main-info-map-link" href="blank.html">Заблудились? Напишите нам!</a>
 			</div>
 		</section>
 	    </div>
@@ -334,17 +334,21 @@
 		        <p>© 2010–2019 Компания «Техномарт»
 				   Все права защищены</p>
 			</div>
-		<ul class="footer-socials-list">
-            <li><a href="#"><img class="logo-socials" src="img/icon-vk.png" width="27" height="16" alt="Логотип ВКонтакте"></a></li>
-            <li><a href="#"><img class="logo-socials" src="img/icon-fb.png" width="12" height="22" alt="Логотип Фейсбук"></a></li>
-            <li><a href="#"><img class="logo-socials" src="img/icon-insta.png" width="21" height="21" alt="Логотип Инстаграмм"></a></li>
-        </ul>
-	    <p class="footer-socials-mail">Обратная связь:<br>
-        <a class="footer-socials-link link-orange" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-        <p class="footer-socials-site">Разработано -<br>
-        <a class="footer-socials-link link-orange" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-		</p>
+		    <div class="footer-socials-list">
+                <a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-vk.png" width="27" height="16" alt="Логотип ВКонтакте"></a>
+			    <a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-fb.png" width="12" height="22" alt="Логотип Фейсбук"></a>
+				<a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-insta.png" width="21" height="21" alt="Логотип Инстаграмм"></a>
+			</div>
+			<div class="footer-socials-mail">
+	             <p>Обратная связь:
+                 <a class="footer-socials-link link-orange" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+				 </p>
+			</div>
+			<div class="footer-socials-site">
+                <p>Разработано -
+				<a class="footer-socials-link link-orange" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+				</p>
+			</div>
 	    </div>	
 	    </section>
 	
