--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
 	<title>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</title>
 	<link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
@@ -41,7 +41,7 @@
 				<div class="header-section-centr-address"><p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
 		    </div>
 			<div class="header-section-centr-authorization catalog-authorization">
-				<div class="header-section-centr-name">
+				
 					<a class="header-section-centr-name-a" href="blank.html">
 						<svg class="header-section-centr-name-avatar" width="20" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.9 14.2a22 22 0 01-5.2-2.4c-.7-.5-.8-1.6-.5-2.4A5.5 5.5 0 0014 5C14 2.3 12.2 0 10 0S6 2.3 6 5c0 1.9.7 3.5 1.8 4.4.3.8.2 1.9-.5 2.4-1 .7-3 1.6-5.2 2.4C0 14.9 0 18 0 18h20s0-3.1-2.1-3.8z" fill="#C5C5C5"/></svg>
 						Равшан Джамшутович
@@ -50,7 +50,7 @@
 							<path d="M2.10591 13.952V3.048C2.12391 2.672 2.27691 1.991 3.11591 1.991H8.14291V0H3.11591C0.937914 0 0.111914 1.81 0.0869141 3.027V13.973C0.111914 15.189 0.937914 17 3.11591 17H8.14291V15.01H3.11591C2.27691 15.01 2.12391 14.327 2.10591 13.952Z" fill="#C5C5C5"/>
 						</svg>
 					</a>
-				</div>
+				
 			    <a class="header-section-centr-account" href="blank.html">Мои заказы  - Личный кабинет</a>
 			</div>
 		</section>
@@ -319,12 +319,12 @@
 			</ul>
 			
 			<div class="pagination-box">
-			    <ul class="pagination-list">
-                    <li class="pagination-item item-number pagination-item-current"><a>1</a></li>
-                    <li class="pagination-item item-number"><a href="blank.html">2</a></li>
-					<li class="pagination-item item-number"><a href="blank.html">3</a></li>
-					<li class="pagination-item item-next"><a href="blank.html">СЛЕДУЮЩАЯ</a></li>
-				</ul>
+			    <div class="pagination-list">
+                    <a class="pagination-item item-number pagination-item-current">1</a>
+                    <a class="pagination-item item-number" href="blank.html">2</a>
+					<a class="pagination-item item-number" href="blank.html">3</a>
+					<a class="pagination-item item-next" href="blank.html">СЛЕДУЮЩАЯ</a>
+				</div>
 			</div>
 		</section>
 
@@ -369,24 +369,28 @@
 	    </nav>
 	
 	    <section class="footer-socials">
-		<div class="container-footer-socials">
-			<div class="footer-socials-blok">
-		        <p>© 2010–2019 Компания «Техномарт»
-				   Все права защищены</p>
-			</div>
-		<ul class="footer-socials-list">
-            <li><a href="#"><img class="logo-socials" src="img/icon-vk.png" width="27" height="16" alt="Логотип ВКонтакте"></a></li>
-            <li><a href="#"><img class="logo-socials" src="img/icon-fb.png" width="12" height="22" alt="Логотип Фейсбук"></a></li>
-            <li><a href="#"><img class="logo-socials" src="img/icon-insta.png" width="21" height="21" alt="Логотип Инстаграмм"></a></li>
-        </ul>
-	    <p class="footer-socials-mail">Обратная связь:<br>
-        <a class="footer-socials-link link-orange" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-        <p class="footer-socials-site">Разработано -<br>
-        <a class="footer-socials-link link-orange" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-		</p>
-	    </div>	
-	    </section>
+			<div class="container-footer-socials">
+				<div class="footer-socials-blok">
+					<p>© 2010–2019 Компания «Техномарт»
+					   Все права защищены</p>
+				</div>
+				<div class="footer-socials-list">
+					<a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-vk.png" width="27" height="16" alt="Логотип ВКонтакте"></a>
+					<a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-fb.png" width="12" height="22" alt="Логотип Фейсбук"></a>
+					<a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-insta.png" width="21" height="21" alt="Логотип Инстаграмм"></a>
+				</div>
+				<div class="footer-socials-mail">
+					 <p>Обратная связь:
+					 <a class="footer-socials-link link-orange" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+					 </p>
+				</div>
+				<div class="footer-socials-site">
+					<p>Разработано -
+					<a class="footer-socials-link link-orange" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+					</p>
+				</div>
+			</div>	
+			</section>
 	
 	</footer>
 	
