правки по переполнению

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				и инструментов для ремонта</p>
 			 </div>
 			<div class="header-section-centr-contacts">
-			    <div class="header-section-centr-tel"><a class="header-tel" href="tel:+78125550555">+7 (812) 555-05-55</a></div>
+			    <a class="header-section-centr-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<div class="header-section-centr-address"><p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
 		    </div>
 			<div class="header-section-centr-authorization">
@@ -65,7 +65,7 @@
 		<section class="main-promo container">
 		    <ul class="main-promo-list">
                 <li class="main-promo-item promo-materials">				    
-				    <h2>Материалы</h2>
+				    <h2>Материалы d f g f d g d f g d f d gdfgdfgdfgdf oojfghfhf</h2>
 					<a class="main-promo-buttom" href="blank.html">на любой вкус</a>
 					<div class="main-promo-new">new</div>				
 				</li>
@@ -123,7 +123,7 @@
 					<div class="container-product">
 						<div><img src="img/snippet-32961.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000"></div>
 						<div class="container-button-product">
-							<button class="button-product-buy">Купить</button>
+							<button class="button-product-buy">Купить h hhhhh hh hh kkkkkk kkkkkkkk</button>
 							<button class="button-product-bookmarks">В закладки</button>
 						</div>
 				    </div>
