--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
 			   и инструментов для ремонта</p>
 			</div>
 			<div class="header-section-centr-contacts">
-			    <div class="header-section-centr-tel"><a class="header-tel" href="tel:+78125550555">+7 (812) 555-05-55</a></div>
+			    <a class="header-section-centr-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<div class="header-section-centr-address"><p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
 		    </div>
 			<div class="header-section-centr-authorization catalog-authorization">
