--- a/catalog.html
+++ b/catalog.html
@@ -184,7 +184,7 @@
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new none">new</div>
@@ -192,14 +192,14 @@
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
 					<div class="old-price"><span>30500 Р.</span></div>
-						<div class="button-product"><a href="#">25500 Р.</a></div>					
+						<a class="button-product" href="#"><span>25500 Р.</span></a>					
 				</li>
 				<li  class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new none">new</div>	
@@ -207,14 +207,14 @@
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
 					<div class="old-price"><span>30500 Р.</span></div>
-					<div class="button-product"><a href="#">25500 Р.</a></div>					
+					<a class="button-product" href="#"><span>25500 Р.</span></a>					
 				</li>
 				<li  class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new">new</div>	
@@ -222,7 +222,7 @@
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
 					<div class="old-price"><span>30500 Р.</span></div>
-					<div class="button-product"><a href="#">25500 Р.</a></div>					
+					<a class="button-product" href="#"><span>25500 Р.</span></a>				
 				</li>
 				<li  class="main-product-item">
 					<div class="container-product">
@@ -230,7 +230,7 @@
 							<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 						</div>
 						<div class="container-button-product">
-							<button class="button-product-buy">Купить</button>
+							<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 							<button class="button-product-bookmarks">В закладки</button>
 						</div>
 					</div>
@@ -239,14 +239,14 @@
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
 					<div class="old-price"><span>22500 Р.</span></div>
-					<div class="button-product"><a href="#">15500 Р.</a></div>					
+					<a class="button-product" href="#"><span>15500 Р.</span></a>					
 				</li>
 				<li class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new none">new</div>	
@@ -254,14 +254,14 @@
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
 					<div class="old-price"><span>30500 Р.</span></div>
-					<div class="button-product"><a href="#">25500 Р.</a></div>					
+					<a class="button-product" href="#"><span>25500 Р.</span></a>					
 				</li>
 				<li  class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new">new</div>
@@ -269,14 +269,14 @@
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a></div>
 					<div class="old-price"><span></span></div>
-					<div class="button-product"><a href="#">12500 Р.</a></div>				
+					<a class="button-product" href="#"><span>12500 Р.</span></a>			
 				</li>
 				<li class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new">new</div>	
@@ -284,14 +284,14 @@
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a></div>
 					<div class="old-price"><span>22500 Р.</span></div>
-					<div class="button-product"><a href="#">15500 Р.</a></div>					
+					<a class="button-product" href="#"><span>15500 Р.</span></a>					
 				</li>
 				<li  class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new none">new</div>	
@@ -299,14 +299,14 @@
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
 					<div class="old-price"><span>30500 Р.</span></div>
-					<div class="button-product"><a href="#">25500 Р.</a></div>					
+					<a class="button-product" href="#"><span>25500 Р.</span></a>					
 				</li>
 				<li  class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new">new</div>
@@ -314,7 +314,7 @@
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a></div>
 					<div class="old-price"><span></span></div>
-					<div class="button-product"><a href="#">12500 Р.</a></div>					
+					<a class="button-product" href="#"><span>12500 Р.</span></a>					
 				</li>				
 			</ul>
 			
