--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<section class="main-promo container">
 		    <ul class="main-promo-list">
                 <li class="main-promo-item promo-materials">				    
-				    <h2>Материалы d f g f d g d f g d f d gdfgdfgdfgdf oojfghfhf</h2>
+				    <h2>Материалы</h2>
 					<a class="main-promo-buttom" href="blank.html">на любой вкус</a>
 					<div class="main-promo-new">new</div>				
 				</li>
@@ -82,14 +82,18 @@
 				<li class="main-promo-slider">
 					
 						<div class="main-promo-slide promo-slide1 none">
-							<h2 class="slide-title-h2">Дрели</h2>
-							<p class="slide-title-p">Соседям на радость!</p>
+							<div class="slide-title">
+								<h2 class="slide-title-h2">Дрели</h2>
+							    <p class="slide-title-p">Соседям на радость!</p>
+							</div>							
 							<a class="main-promo-slide-link link-button" href="#">открыть каталог</a>
 						</div>
 
 						<div class="main-promo-slide promo-slide2">
-							<h2 class="slide-title-h2">Перфораторы</h2>
-                            <p class="slide-title-p">Настоящие мужские игрушки</p>
+							<div class="slide-title">
+								<h2 class="slide-title-h2">Перфораторы</h2>
+                                <p class="slide-title-p">Настоящие мужские игрушки</p>
+							</div>							
 							<a class="main-promo-slide-link link-button" href="#">открыть каталог</a>
 						</div>
 
@@ -123,7 +127,7 @@
 					<div class="container-product">
 						<div><img src="img/snippet-32961.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000"></div>
 						<div class="container-button-product">
-							<button class="button-product-buy">Купить h hhhhh hh hh kkkkkk kkkkkkkk</button>
+							<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 							<button class="button-product-bookmarks">В закладки</button>
 						</div>
 				    </div>
@@ -132,7 +136,7 @@
 						<h3>Перфоратор BOSCH BFG 9000</h3>
 					</a></div>
 						<div class="old-price"><span>32500 Р.</span></div>
-						<div class="button-product"><a href="#">25500 Р.</a></div>				
+						<a class="button-product" href="#"><span>25500 Р.</span></a>			
 				</li>
 				<li class="main-product-item">
 					<div class="container-product">
@@ -140,7 +144,7 @@
 							<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 						</div>
 						<div class="container-button-product">
-							<button class="button-product-buy">Купить</button>
+							<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 							<button class="button-product-bookmarks">В закладки</button>
 						</div>
 					</div>
@@ -149,14 +153,14 @@
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
 					<div class="old-price"><span>22500 Р.</span></div>
-					<div class="button-product"><a href="#">15500 Р.</a></div>					
+					<a class="button-product" href="#"><span>15500 Р.</span></a>					
 				</li>
 				<li class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new none">new</div>
@@ -164,14 +168,14 @@
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
 					<div class="old-price"><span>30500 Р.</span></div>
-					<div class="button-product"><a href="#">25500 Р.</a></div>					
+					<a class="button-product" href="#"><span>25500 Р.</span></a>					
 				</li>
 				<li class="main-product-item">
 					<div class="container-img-product">
 						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
 					</div>
 					<div class="container-button-product">
-						<button class="button-product-buy">Купить</button>
+						<button class="button-product-buy"><span class="button-product-buy-before">Купить</span></button>
 						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new">new</div>
@@ -179,7 +183,7 @@
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a>
 					<div class="old-price"><span></span></div>
-						<div class="button-product"><a href="#">12500 Р.</a></div>					
+						<a class="button-product" href="#"><span>12500 Р.</span></a>					
 				</li>
 			</ul>
 		</section>
@@ -335,9 +339,9 @@
 				   Все права защищены</p>
 			</div>
 		    <div class="footer-socials-list">
-                <a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-vk.png" width="27" height="16" alt="Логотип ВКонтакте"></a>
-			    <a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-fb.png" width="12" height="22" alt="Логотип Фейсбук"></a>
-				<a class="footer-socials-item" href="#"><img class="logo-socials" src="img/icon-insta.png" width="21" height="21" alt="Логотип Инстаграмм"></a>
+                <a class="footer-socials-item" href="#"><div class="socials-item-vk"><span class="visually-hidden">Вконтакте</span></div></a>
+			    <a class="footer-socials-item" href="#"><div class="socials-item-f"><span class="visually-hidden">Фейсбук</span></div></a>
+				<a class="footer-socials-item" href="#"><div class="socials-item-insta"><span class="visually-hidden">Инстаграмм</span></div></a>
 			</div>
 			<div class="footer-socials-mail">
 	             <p>Обратная связь:
